--- a/Thermal Gradient Analyses.Rmd
+++ b/Thermal Gradient Analyses.Rmd
@@ -15,13 +15,15 @@ library(googlesheets4)
 library(tidyr)
 library(dplyr)
 library(data.table)
-library(lubridate)
+#library(lubridate)
 library(NRES803)
 library(ggplot2)
 library(lme4)
-library(DHARMa)
+#library(DHARMa)
 library(forcats)
 library(gap)
+library(car)
+library(lmerTest)
 ```
 
 # Signing up to my google account and getting the data sheet
@@ -374,6 +376,7 @@ ggsave(plot=last_plot(),filename="Sides_together_avtime2.jpg",  path="Outputs/Ex
 # Per individual
 
 side2<- beh %>%
+  filter(trial.x!=10)%>%
   group_by(stage, ID, sides) %>%
   summarize(timesum=sum(time)) 
 
@@ -395,8 +398,25 @@ side3$pval <- mapply(bt, side3$timesum, side3$ttime)
 ggplot(side3, aes(y=pval, x=sides, color=stage)) +geom_jitter() + geom_hline(yintercept=0.05, linetype="dashed")
 
 
+## Plotting data from analyses
+side3<-complete(side2, sides, fill=list(timesum=0)) %>%
+  filter(!sides %in% c("Middle", "NA") )%>%
+  group_by(ID) %>%
+  mutate(ttime=sum(timesum),
+         proptime=timesum/ttime)
+
+ggplot(side3, aes(y=proptime, x=as.factor(ID), fill=sides))+
+  geom_bar(stat="identity", position="stack")+
+  #scale_fill_manual(values=colors)+
+   theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="bottom", axis.ticks.x =element_blank(), axis.text.x=element_blank())+ 
+  facet_wrap(~stage,ncol=2, scales="free_x" )  + xlab("Side of the arena")+  ylab("Cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="BinomialperID.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
 # all together
 side2<- beh %>%
+   filter(trial.x!=10)%>%
   group_by(sides) %>%
   summarize(timesum=sum(time)) 
 
@@ -407,12 +427,28 @@ side3<-complete(side2, sides, fill=list(timesum=0)) %>%
 
 side3$pval <- binom.test(side3$timesum, side3$ttime, 0.5)$p.value
 
-bt1<-binom.test(261198, 509639	, 0.5)
+binom.test(261198, 509639	, 0.5, alternative="greater")
 binom.test(248441, 509639	, 0.5)
 
 bt1$p.value
 
 # Both sides differ from 50%
+
+## Plotting data from analyses
+side3<-complete(side2, sides, fill=list(timesum=0)) %>%
+  filter(!sides %in% c("Middle", "NA") )%>%
+  mutate(ttime=sum(timesum),
+         proptime=timesum/ttime)
+
+ggplot(side3, aes(y=proptime, x=sides,  fill=sides))+
+  geom_bar(stat="identity", position="stack")+
+  #scale_fill_manual(values=colors)+
+   theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none")+ 
+   xlab("Side of the arena")+  ylab("Proportional cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="Binomialall.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
 
 ```
 
@@ -425,12 +461,15 @@ summary(m1)
 NRES803::check_assumptions(m1)
 
 # Comparing cumulative time per ID
-m2<-lm(timesum~sides+stage, data=behch)
+m2<-lm(timesum~sides, data=behch)
 summary(m2)
 NRES803::check_assumptions(m2)
 
+m3<-lmer(timeav~sides+(1|stage), data=behch)
+summary(m3)
 
-
+m4<-lmer(timesum~sides+(1|stage), data=behch)
+summary(m4)
 
 
 ```
@@ -720,7 +759,9 @@ ggsave(plot=last_plot(),filename="Avtime_stages.jpg",  path="Outputs/Exploratory
 
 # Dividing between hot and cold
 
-## All stages at once
+## Plots
+
+### All stages at once
 ```{r}
 behch<-beh%>%
   group_by(stage,half) %>%
@@ -765,6 +806,105 @@ ggsave(plot=last_plot(),filename="Half_all_avtime2.jpg",  path="Outputs/Explorat
 
 
 ```
+## Binomial test
+
+```{r}
+# Per individual
+
+half2<- beh %>%
+  group_by(stage, ID, half) %>%
+  summarize(timesum=sum(time)) 
+
+half3<-complete(half2, half, fill=list(timesum=0)) %>%
+  filter(!half %in% c("Middle", "NA") )%>%
+  group_by(ID) %>%
+  mutate(ttime=sum(timesum)) %>%
+  filter(half=="Hotter") %>%
+  filter(ID!=45)
+
+## Getting a p-vaue for each individual testing 2 sided (colder and hotter are different)
+bt <- function(a, b, p = 0.5) {binom.test(a, b, 0.5, alternative=
+                            c("two.sided"), conf.level = 0.95)$p.value}
+half3$pval2sided <- mapply(bt, half3$timesum, half3$ttime)
+
+## Getting a p-vaue for each individual testing 2 sided (they are more likely to spend more time on hotter)
+btg <- function(a, b, p = 0.5) {binom.test(a, b, 0.5, alternative=
+                            c("greater"), conf.level = 0.95)$p.value}
+half3$pvalgreater <- mapply(btg, half3$timesum, half3$ttime)
+
+
+## Plotting P-values
+ggplot(half3, aes(y=pval2sided, x=half, color=stage)) +geom_jitter() + geom_hline(yintercept=0.05, linetype="dashed")
+
+ggplot(half3, aes(y=pvalgreater, x=half, color=stage)) +geom_jitter() + geom_hline(yintercept=0.05, linetype="dashed")
+
+
+## Plotting data from analyses
+half3<-complete(half2, half, fill=list(timesum=0)) %>%
+  filter(!half %in% c("Middle", "NA") )%>%
+  group_by(ID) %>%
+  mutate(ttime=sum(timesum),
+         proptime=timesum/ttime)
+
+ggplot(half3, aes(y=proptime, x=as.factor(ID), fill=half))+
+  geom_bar(stat="identity", position="stack")+
+  scale_fill_manual(values=c("#0571b0", "#ca0020"))+
+   theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="bottom", axis.ticks.x =element_blank(), axis.text.x=element_blank())+ 
+  facet_wrap(~stage,ncol=2, scales="free_x" )  + xlab("Side of the arena")+  ylab("Cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="BinomialperID_temp.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+
+
+# all together
+half2<- beh %>%
+  group_by(half) %>%
+  summarize(timesum=sum(time)) 
+
+half3<-complete(half2, half, fill=list(timesum=0)) %>%
+  filter(!half %in% c("Middle", "NA") )%>%
+  mutate(ttime=sum(timesum))# %>%
+  #filter(half=="Left")
+
+half3$pval <- binom.test(half3$timesum, half3$ttime, 0.5)$p.value
+
+half3
+
+# Testing 2 sided
+binom.test(x=399930	, n=509639	, 0.5)
+binom.test(x=109709	, n=509639	, 0.5)
+
+
+# Both halves differ from 50%
+
+
+# Testing hotter more time
+binom.test(x=399930	, n=509639	, 0.5, alternative="greater") #Colder they  spend more time in colder 
+binom.test(109709	, 509639	, 0.5, alternative="greater") #hotter: they dont spend more time in hotter
+binom.test(109709	, 509639	, 0.5, alternative="less") #hotter: they  spend less time in hotter
+
+
+## Plotting data from analyses
+half3<-complete(half2, half, fill=list(timesum=0)) %>%
+  filter(!half %in% c("Middle", "NA") )%>%
+  mutate(ttime=sum(timesum),
+         proptime=timesum/ttime)
+
+ggplot(half3, aes(y=proptime, x=half,  fill=half))+
+  geom_bar(stat="identity", position="stack")+
+  scale_fill_manual(values=c("#0571b0", "#ca0020"))+
+   theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none")+ 
+   xlab("Half of the arena")+  ylab("Proportional cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="Binomialall_temp.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+```
+
+
+
+
 # Organizing data for exploration (line crossing)
 
 ```{r}
@@ -789,6 +929,13 @@ levels(as.factor(behlines$ID))
 
 
 ```
+
+
+
+
+
+
+
 
 
 ## Looking at exploration data
